--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+bleach==2.1.3
 certifi==2017.7.27.1
 chardet==3.0.4
 coreapi==2.3.1
@@ -17,6 +18,7 @@ djangorestframework==3.6.3
 djangorestframework-jwt==1.11.0
 drf-extensions==0.3.1
 future==0.16.0
+html5lib==1.0.1
 httplib2==0.10.3
 idna==2.6
 itypes==1.1.0
@@ -42,6 +44,7 @@ social-auth-app-django==1.2.0
 social-auth-core==1.4.0
 uritemplate==3.0.0
 urllib3==1.22
+webencodings==0.5.1
 Whoosh==2.7.4
 XlsxWriter==0.9.8
 xlwt==1.2.0
